<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_horizontal"
        android:text="@string/title_txt"
        android:textColor="#ffFF0000"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/spinnerTitle_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp"
            android:text="@string/movie_txt"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/movie_spinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="TouchTargetSizeCheck"
            android:entries="@array/movie_array" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivMoviePoster"
        android:layout_width="128dp"
        android:layout_height="256dp"
        android:layout_gravity="center_horizontal"
        tools:ignore="ContentDescription" />

    <RadioGroup
        android:id="@+id/radioGrp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <RadioButton
            android:id="@+id/r_btnMultiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_btnMultiple" />
        <RadioButton
            android:id="@+id/r_btnSingle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_btnSingle" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/ticketCount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:visibility="invisible">

        <TextView
            android:id="@+id/ticketCount_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticketCount_txt" />

        <SeekBar
            android:id="@+id/ticketCount_sb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4"
            android:min="1"
            android:progress="2" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGrp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/r_btnPaypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/r_btnP" />
        <RadioButton
            android:id="@+id/r_btnVisa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/r_btnV" />
    </RadioGroup>

    <EditText
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:paddingBottom="15dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/clear_btn"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10sp"
        android:background="@drawable/custombuttonred"
        android:text="@string/clearBtn_txt"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/finish_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custombuttonred"
        android:text="@string/finishBtn_txt"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>